--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="./img/toasty.ico" rel="shortcut icon" type="image/png" />
+    <link rel="icon" href="data:;base64,=./img/toasty.ico">
     <title>Catch of the Day</title>
   </head>
   <body>
